# PV204project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  docker_generator.py  keygen  last.json  pubpkg_array.inc
.github/workflows/: integration.yml
client/: README.md
include/: AlgorithmPlayground.h  README.md  base64.h  client_cli.h  coordinator.h  crypto_utils.h  frost.h  frost_ffi.h  keygen.h  server_main.h
lib/frostdemo/: Cargo.toml
lib/frostdemo/src/: lib.rs
src/: AlgorithmPlayground.cpp  CMakeForRun.txt  README.md  base64.cpp  client_cli.cpp  coordinator.cpp  crypto_utils.cpp  frost_ffi.h  frost_ffi.h.cpp  keygen.cpp  keygen_main.cpp  node.cpp  server_main.cpp  verify_cli.cpp
src/AlgorithmPlayground/: AlgorithmPlayground.cpp  CMakeForRun.txt  coordinator.h  frost.h  node.h
src/AlgorithmPlayground/frostdemo/: Cargo.toml
tests/: README.md  test_base64.cpp  test_crypto.cpp
