
[package]
name = "frost_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
frost-ed25519 = { version = "2", default-features = true }   # FROST over Ed25519
rand = "0.8"                                                  # for OsRng
serde = { version = "1", features = ["derive"] }
bincode = "1"
libc = "0.2.183"

[build-dependencies]
cbindgen = "0.26"                                             # generates the C header